--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;400;600&display=swap');
 
-:root {
+:root, p, button, ul, li {
   font-family: 'Martian Mono', monospace;
 }
 body {
@@ -40,9 +40,6 @@ li {
   margin-bottom: 2px;
   font-size: 0.7rem;
   color: #b6b6b6;
-}
-h5, h6 {
-  font-weight: 400;
 }
 
 .sub-text {
